--- a/release-notes/4.7.25.md
+++ b/release-notes/4.7.25.md
@@ -13,33 +13,15 @@ Released October 4, 2017
 
 | *Does this version...?*                                     |         |
 |:----------------------------------------------------------- |:-------:|
-| Fix security vulnerabilities?                               |         |
-| Change the database schema?                                 |         |
-| Alter the API?                                              |         |
+| Fix security vulnerabilities?                               |   no    |
+| **Change the database schema?**                             | **yes** |
+| **Alter the API?**                                          | **yes** |
 | Require attention to configuration options?                 |         |
 | Fix problems installing or upgrading to a previous version? |         |
-| Introduce features?                                         |         |
-| Fix bugs?                                                   |         |
+| **Introduce features?**                                     | **yes** |
+| **Fix bugs?**                                               | **yes** |
 
 ## <a name="features"></a>Features
-
-### CiviCase, Core CiviCRM
-
-- **[CRM-20958](https://issues.civicrm.org/jira/browse/CRM-20958) Data model:
-  Track creation+modification times for activities+cases
-  ([10754](https://github.com/civicrm/civicrm-core/pull/10754))**
-
-  Adds timestamp columns created_date and modified_date to the tables
-  `civicrm_activity` and `civicrm_case`
-
-### CiviCRM API
-
-- **[CRM-21152](https://issues.civicrm.org/jira/browse/CRM-21152) Add spec for
-  MembershipStatus.calc API function
-  ([10944](https://github.com/civicrm/civicrm-core/pull/10944))**
-
-  Adds a function to adjust Metadata for Calc action. The metadata is used for
-  setting defaults, documentation & validation.
 
 ### Core CiviCRM
 
@@ -47,27 +29,27 @@ Released October 4, 2017
   Button Text on profiles to be overriden in settings
   ([10940](https://github.com/civicrm/civicrm-core/pull/10940))**
 
-  This adds columns to the civicrm_uf_group table to support customising profile
-  buttons
+  This adds columns to the `civicrm_uf_group` table to support customizing
+  profile buttons
 
 - **[CRM-20964](https://issues.civicrm.org/jira/browse/CRM-20964) Include queue
   id while retrieving rows from Event Queue.
   ([10757](https://github.com/civicrm/civicrm-core/pull/10757))**
 
-  CRM_Mailing_Event_BAO_Queue::getRows(); returned rows for each intended
+  `CRM_Mailing_Event_BAO_Queue::getRows()` returned rows for each intended
   recipients, but didn't include any info which differentiates each row.
 
-  This adds a queue_id in the key column of the $result array which enables
+  This adds a `queue_id` in the key column of the $result array which enables
   hooks to know which row is getting displayed.
 
 - **[CRM-21118](https://issues.civicrm.org/jira/browse/CRM-21118) Add action
   links for message templates overview at top of page
   ([10917](https://github.com/civicrm/civicrm-core/pull/10917))**
 
-  Previously action links (add message template) were only shown at the bottom of
-  the page.  If you have lot's of message templates it is not visible until
+  Previously action links (add message template) were only shown at the bottom
+  of the page.  If you have lots of message templates it is not visible until
   scrolling down.  This adds the links at the top of the page as well (like many
-  other pages in civicrm).
+  other pages in CiviCRM).
 
 - **[CRM-20979](https://issues.civicrm.org/jira/browse/CRM-20979) pre help for
   price fields not exposed to UI.
@@ -78,74 +60,143 @@ Released October 4, 2017
 
 - **[CRM-20680](https://issues.civicrm.org/jira/browse/CRM-20680) Make the
   CiviCRM logo spin while waiting for next page to load
-  ([10903](https://github.com/civicrm/civicrm-core/pull/10903))**
+  ([10903](https://github.com/civicrm/civicrm-core/pull/10903)) (fix to previous
+  work)**
 
-  This patch gives a visual indication that the next page is loading by
-  spinning the Civi logo when navigating to a new page.
+  This fixes a side effect of the new feature that caused all CiviCRM logos on
+  the page to spin.
 
-- **[CRM-21078](https://issues.civicrm.org/jira/browse/CRM-21078) Allow user to save and continue editing message template ([10871](https://github.com/civicrm/civicrm-core/pull/10871))**
+- **[CRM-21078](https://issues.civicrm.org/jira/browse/CRM-21078) Allow user to
+  save and continue editing message template
+  ([10871](https://github.com/civicrm/civicrm-core/pull/10871))**
 
-- **[CRM-230](https://issues.civicrm.org/jira/browse/CRM-230) File import -- storeable field mappings ([10797](https://github.com/civicrm/civicrm-core/pull/10797))**
+  The message template editing screen now matches similar forms in CiviCRM by
+  offering separate "Save" and "Save and Done" buttons.
 
-- **[CRM-21077](https://issues.civicrm.org/jira/browse/CRM-21077) Warn the user when testing outbound mail configuration if CIVICRM_MAIL_LOG is set ([10870](https://github.com/civicrm/civicrm-core/pull/10870))**
+- **[CRM-20941](https://issues.civicrm.org/jira/browse/CRM-20941) Determine &
+  notify date to end support for PHP5.3 and PHP5.4
+  ([10851](https://github.com/civicrm/civicrm-core/pull/10851))**
 
-- **[CRM-20941](https://issues.civicrm.org/jira/browse/CRM-20941) Determine & notify date to end support for PHP5.3 and PHP5.4 ([10851](https://github.com/civicrm/civicrm-core/pull/10851))**
+  A pre-upgrade message and system check now warn administrators of sites using
+  PHP versions prior to  5.6.
 
-- **[CRM-20927](https://issues.civicrm.org/jira/browse/CRM-20927)  Allow `civicrm_menu` to store new data in generic column ([10858](https://github.com/civicrm/civicrm-core/pull/10858))**
+- **[CRM-17157](https://issues.civicrm.org/jira/browse/CRM-17157) CiviCRM money
+  validation should allow more decimal places
+  ([10827](https://github.com/civicrm/civicrm-core/pull/10827))**
 
-- **[CRM-20507](https://issues.civicrm.org/jira/browse/CRM-20507) Prevent disclosure of is_public=0 Custom Groups in email templates ([10661](https://github.com/civicrm/civicrm-core/pull/10661))**
+  Previously, validation of money fields limited values to two decimal places.
+  This allows for currencies that may have more decimal places.
 
-- **[CRM-21036](https://issues.civicrm.org/jira/browse/CRM-21036) Change deprecated comments to tags so phpstorm marks functions as deprecated ([10825](https://github.com/civicrm/civicrm-core/pull/10825))**
+- **[CRM-20926](https://issues.civicrm.org/jira/browse/CRM-20926) Allow
+  extensions to flag PHPIDS html/json fields
+  ([10709](https://github.com/civicrm/civicrm-core/pull/10709))**
 
-- **[CRM-21057](https://issues.civicrm.org/jira/browse/CRM-21057) export field mapping limited to 25 records ([10848](https://github.com/civicrm/civicrm-core/pull/10848))**
+  Extensions can now denote fields that should be be evaluated as HTML, JSON, or
+  exceptions for the intrusion detection system (IDS).
 
-- **[CRM-17157](https://issues.civicrm.org/jira/browse/CRM-17157) CiviCRM money validation should allow more decimal places ([10827](https://github.com/civicrm/civicrm-core/pull/10827))**
+- **[CRM-20155](https://issues.civicrm.org/jira/browse/CRM-20155) The dedupe
+  code passes has serious maintainability issues, locked in by hooks
+  ([10890](https://github.com/civicrm/civicrm-core/pull/10890)) (preliminary
+  work)**
 
-- **[CRM-21023](https://issues.civicrm.org/jira/browse/CRM-21023) Replace deprecated code and hardcoded IDs with pseudoconstants in Activity BAO ([10816](https://github.com/civicrm/civicrm-core/pull/10816))**
+  This is initial cleanup work toward separating the dedupe process from the
+  form layer, allowing for extensions to do custom dedupe logic.  This initial
+  work merely cleans up the existing processing.
 
-- **[CRM-20926](https://issues.civicrm.org/jira/browse/CRM-20926) Allow extensions to flag PHPIDS html/json fields ([10709](https://github.com/civicrm/civicrm-core/pull/10709))**
+- **[CRM-17748](https://issues.civicrm.org/jira/browse/CRM-17748) Expose
+  options['result_buffering'] to CRM_Core_DAO
+  ([10585](https://github.com/civicrm/civicrm-core/pull/10585))**
 
-### Dedupe
+  Queries sent to the DAO can now pass options for `DB_mysql`.  Specifically,
+  a `result_buffering` option can reduce PHP memory needs by calling for an
+  unbuffered query.
 
-- **[CRM-21124](https://issues.civicrm.org/jira/browse/CRM-21124) Fix DB error on deduping by criteria when criteria string is too long ([10921](https://github.com/civicrm/civicrm-core/pull/10921))**
+- **[CRM-20733](https://issues.civicrm.org/jira/browse/CRM-20733) Relationship
+  report improvements
+  ([10679](https://github.com/civicrm/civicrm-core/pull/10679))**
 
-- **[CRM-20155](https://issues.civicrm.org/jira/browse/CRM-20155) The dedupe code passes has serious maintainability issues, locked in by hooks ([10890](https://github.com/civicrm/civicrm-core/pull/10890))**
+  The Relationship Report can now filter results by permissions (contact A over
+  contact B and vice-versa) and order results by start date.
 
-### CiviCRM API, NYSS
+- **[CRM-21108](https://issues.civicrm.org/jira/browse/CRM-21108) Creating
+  contacts is slow, part 1 of 2: Calculating Greetings
+  ([10906](https://github.com/civicrm/civicrm-core/pull/10906))**
 
-- **[CRM-17748](https://issues.civicrm.org/jira/browse/CRM-17748) Expose options['result_buffering'] to CRM_Core_DAO ([10585](https://github.com/civicrm/civicrm-core/pull/10585))**
-
-### CiviMail
-
-- **[CRM-20905](https://issues.civicrm.org/jira/browse/CRM-20905) Simple mail : Make max emails a hidden config instead of hardcoded value set to 50Si ([10705](https://github.com/civicrm/civicrm-core/pull/10705))**
+  This optimizes the population of greetings for newly-created contacts, the
+  slowest part of generating contacts.
 
 ### CiviCase
 
-- **[CRM-21052](https://issues.civicrm.org/jira/browse/CRM-21052) Allow opt-out of embedded case-activity tracking ([10842](https://github.com/civicrm/civicrm-core/pull/10842))**
+- **[CRM-20958](https://issues.civicrm.org/jira/browse/CRM-20958) Data model:
+  Track creation+modification times for activities+cases
+  ([10754](https://github.com/civicrm/civicrm-core/pull/10754))**
 
-### CiviReport
+  Adds timestamp columns created_date and modified_date to the tables
+  `civicrm_activity` and `civicrm_case`
 
-- **[CRM-21058](https://issues.civicrm.org/jira/browse/CRM-21058) Add Event filter to PCP contribution report ([10862](https://github.com/civicrm/civicrm-core/pull/10862))**
+- **[CRM-21052](https://issues.civicrm.org/jira/browse/CRM-21052) Allow opt-out
+  of embedded case-activity tracking
+  ([10842](https://github.com/civicrm/civicrm-core/pull/10842))**
 
-- **[CRM-21061](https://issues.civicrm.org/jira/browse/CRM-21061) Fix rare CiviReport error relating to long report names ([10854](https://github.com/civicrm/civicrm-core/pull/10854))**
-
-- **[CRM-20733](https://issues.civicrm.org/jira/browse/CRM-20733) Relationship report improvements ([10679](https://github.com/civicrm/civicrm-core/pull/10679))**
+  A new setting, "Enable Embedded Activity Revisions", determines whether each
+  revision to a case records the change as an activity.  This has been the
+  behavior in the past and will continue to be the default for CiviCase until
+  the redesign is complete.  However, many CiviCase users may prefer to leave
+  change logging to the log tables that are created when overall CiviCRM logging
+  is enabled.
 
 ### CiviContribute
 
-- **[CRM-20990](https://issues.civicrm.org/jira/browse/CRM-20990) Assign $contributionStatus to the Contribution Online message template ([10793](https://github.com/civicrm/civicrm-core/pull/10793))**
+- **[CRM-21058](https://issues.civicrm.org/jira/browse/CRM-21058) Add Event
+  filter to PCP contribution report
+  ([10862](https://github.com/civicrm/civicrm-core/pull/10862))**
 
-### CiviMail, CiviReport
+  The Personal Campaign Page report now allows filtering by the title of a PCP's
+  associated event.
 
-- **[CRM-20643](https://issues.civicrm.org/jira/browse/CRM-20643) Fix invalid bounce type filter for bounce report ([10427](https://github.com/civicrm/civicrm-core/pull/10427))**
+- **[CRM-20990](https://issues.civicrm.org/jira/browse/CRM-20990) Assign
+  `$contributionStatus` to the Contribution Online message template
+  ([10793](https://github.com/civicrm/civicrm-core/pull/10793))**
 
-### CiviCRM Profile, Core CiviCRM
+  The contribution status is now available as a Smarty variable on the receipt
+  message template for online contributions.
 
-- **[CRM-21004](https://issues.civicrm.org/jira/browse/CRM-21004) profile: unable to copy profiles used for events/contribs/etc. ([10802](https://github.com/civicrm/civicrm-core/pull/10802))**
+### CiviEvent
 
-### CiviContribute, Core CiviCRM
+- **[CRM-20507](https://issues.civicrm.org/jira/browse/CRM-20507) Prevent
+  disclosure of `is_public=0` Custom Groups in email templates
+  ([10661](https://github.com/civicrm/civicrm-core/pull/10661))**
 
-- **[CRM-21016](https://issues.civicrm.org/jira/browse/CRM-21016) Allow Drupal views to be used for Notes related to contributions ([468](https://github.com/civicrm/civicrm-drupal/pull/468))**
+  Custom data groups can be public or backend-only as of 4.7.19.  This
+  suppresses non-public fields from email receipts for event registrations.
+
+### CiviMail
+
+- **[CRM-20905](https://issues.civicrm.org/jira/browse/CRM-20905) Simple mail :
+  Make max emails a hidden config instead of hardcoded value set to 50
+  ([10705](https://github.com/civicrm/civicrm-core/pull/10705))**
+
+  The maximum number of emails sent through the quick "send an email" feature is
+  set to 50.  This change allows that number to be overridden through the
+  setting API or settings file.
+
+### CiviMember
+
+- **[CRM-21152](https://issues.civicrm.org/jira/browse/CRM-21152) Add spec for
+  MembershipStatus.calc API function
+  ([10944](https://github.com/civicrm/civicrm-core/pull/10944))**
+
+  Adds a function to adjust metadata for `Calc` action. The metadata is used for
+  setting defaults, documentation & validation.
+
+### Drupal Integration
+
+- **[CRM-21016](https://issues.civicrm.org/jira/browse/CRM-21016) Allow Drupal
+  views to be used for Notes related to contributions
+  ([468](https://github.com/civicrm/civicrm-drupal/pull/468))**
+
+  Drupal Views will now join to the `civicrm_note` table for any related entity,
+  not just contacts.
 
 ## <a name="bugs"></a>Bugs resolved
 
@@ -155,12 +206,8 @@ Released October 4, 2017
   &lastModified() fails more gracefully.
   ([10863](https://github.com/civicrm/civicrm-core/pull/10863))**
 
-  Without this change, there were cases were some contacts were throwing Not Of
-  Type Integer errors in the Contact Summary view (from getDisplayAndImage).
-
-  This change makes the getLastModified fail more gracefully, so it doesn't
-  display an error if something is missing for a contact when getDisplayAndImage
-  is called from the Summary View.
+  This change avoids displaying an error if something is missing from the log
+  entry for a contact when shown in the summary view.
 
 - **[CRM-21099](https://issues.civicrm.org/jira/browse/CRM-21099) Contribution
   search: "Total Cancelled Amount" surprisingly includes "refunded" status
@@ -168,8 +215,8 @@ Released October 4, 2017
 
   In the results of a Find Contributions search, summary numbers are displayed
   at the top. One of these is "Total Cancelled Amount" this total included
-  contributions with a "Refunded" or "Cancelled" status. This total now only includes
-  contributions with a status of "Cancelled".
+  contributions with a "Refunded" or "Cancelled" status. This total now only
+  includes contributions with a status of "Cancelled".
 
 - **[CRM-21075](https://issues.civicrm.org/jira/browse/CRM-21075) Notice errors
   on contact edit
@@ -178,47 +225,101 @@ Released October 4, 2017
   When a user would edit their record, a series of notices would be generated
   because of use of a deprecated function. This change removes those errors.
 
-- **[CRM-21230](https://issues.civicrm.org/jira/browse/CRM-21230) Multi-value custom field import fail with error message: Call to undefined method CRM_Custom_Import_Parser_Api::formatContactParameters ([11039](https://github.com/civicrm/civicrm-core/pull/11039))**
+- **[CRM-21057](https://issues.civicrm.org/jira/browse/CRM-21057) export field
+  mapping limited to 25 records
+  ([10848](https://github.com/civicrm/civicrm-core/pull/10848))**
 
-- **[CRM-21174](https://issues.civicrm.org/jira/browse/CRM-21174) Circular dependency during upgrade: civicrm_menu.module_data ([10974](https://github.com/civicrm/civicrm-core/pull/10974))**
+  This resolves a bug where only 25 saved export mappings were available to
+  select.
 
-- **[CRM-21175](https://issues.civicrm.org/jira/browse/CRM-21175) Fatal error on multiple custom field import ([10975](https://github.com/civicrm/civicrm-core/pull/10975))**
+- **[CRM-21124](https://issues.civicrm.org/jira/browse/CRM-21124) Fix DB error
+  on deduping by criteria when criteria string is too long
+  ([10921](https://github.com/civicrm/civicrm-core/pull/10921))**
 
-- **[CRM-20533](https://issues.civicrm.org/jira/browse/CRM-20533) 'Update Indices' System Status action can get tied up (index name already exists, localised dbs?) ([10908](https://github.com/civicrm/civicrm-core/pull/10908))**
+- **[CRM-21061](https://issues.civicrm.org/jira/browse/CRM-21061) Fix rare
+  CiviReport error relating to long report names
+  ([10854](https://github.com/civicrm/civicrm-core/pull/10854))**
 
-- **(NFC) SettingsStack - Finish incomplete docblock ([10950](https://github.com/civicrm/civicrm-core/pull/10950))**
+  The relatively short length of the `report_id` field in the `civicrm_report`
+  table meant that reports with long names would produce obtuse errors.  The
+  field is now 512 characters long.
 
-- **[CRM-21110](https://issues.civicrm.org/jira/browse/CRM-21110) Relationships tab on contact summary runs query twice ([10907](https://github.com/civicrm/civicrm-core/pull/10907))**
+- **[CRM-21004](https://issues.civicrm.org/jira/browse/CRM-21004) profile:
+  unable to copy profiles used for events/contribs/etc.
+  ([10802](https://github.com/civicrm/civicrm-core/pull/10802))**
 
-- **Reinstate accidentally deleted test. ([10938](https://github.com/civicrm/civicrm-core/pull/10938))**
+- **[CRM-21230](https://issues.civicrm.org/jira/browse/CRM-21230) Multi-value
+  custom field import fail with error message: Call to undefined method
+  `CRM_Custom_Import_Parser_Api::formatContactParameters`
+  ([11039](https://github.com/civicrm/civicrm-core/pull/11039))**
 
-- **[CRM-21142](https://issues.civicrm.org/jira/browse/CRM-21142) Installation fails if PHP XML module isn't installed ([10939](https://github.com/civicrm/civicrm-core/pull/10939))**
+- **[CRM-21174](https://issues.civicrm.org/jira/browse/CRM-21174) Circular
+  dependency during upgrade: civicrm_menu.module_data
+  ([10974](https://github.com/civicrm/civicrm-core/pull/10974))**
 
-- **[CRM-20935](https://issues.civicrm.org/jira/browse/CRM-20935) Deleting an event does not delete links to profiles it used ([10719](https://github.com/civicrm/civicrm-core/pull/10719))**
+  A field to be created during the upgrade was accidentally loaded as part of
+  the upgrade.
 
-- **[CRM-21139](https://issues.civicrm.org/jira/browse/CRM-21139) Font-Awesome icons not showing on fatal error screen ([10937](https://github.com/civicrm/civicrm-core/pull/10937))**
+- **[CRM-21175](https://issues.civicrm.org/jira/browse/CRM-21175) Fatal error on
+  multiple custom field import
+  ([10975](https://github.com/civicrm/civicrm-core/pull/10975))**
 
-- **[CRM-20237](https://issues.civicrm.org/jira/browse/CRM-20237) Event pricesets copied with long suffix cause DB error ([10929](https://github.com/civicrm/civicrm-core/pull/10929))**
+  Import mappings now must have a mapping type.  This resolves an error that
+  would appear when a mapping type was missing; now, the mapping type is created
+  on the fly.
 
-- **[CRM-21126](https://issues.civicrm.org/jira/browse/CRM-21126) member_is_primary not set by default on passing owner in the url ([10923](https://github.com/civicrm/civicrm-core/pull/10923))**
+- **[CRM-20533](https://issues.civicrm.org/jira/browse/CRM-20533) 'Update
+  Indices' System Status action can get tied up (index name already exists,
+  localised dbs?)
+  ([10908](https://github.com/civicrm/civicrm-core/pull/10908)) (continues
+  previous work)**
 
-- **[CRM-19933](https://issues.civicrm.org/jira/browse/CRM-19933) Importing contacts clears out preferred communication method ([10731](https://github.com/civicrm/civicrm-core/pull/10731))**
+  A system check offers to update old or missing table indices when it detects
+  they are missing.  In practice, many sites have equivalent indices to the ones
+  that are supposedly missing, but the index names differ or the index fields
+  are listed in a different order.  This script has had persistent problems with
+  attempting to create indices that already exist or incorrectly dropping
+  indices.
 
-- **[CRM-20949](https://issues.civicrm.org/jira/browse/CRM-20949) BillingBlock.tpl contains wrong paymentProcessor object on initial load of backend Contribution page. ([10734](https://github.com/civicrm/civicrm-core/pull/10734))**
+  This most recent change deletes false indices automatically when the Update
+  Indices process is started rather than asking the site administrator.  Any
+  false-looking index that is actually good will simply be replaced when the
+  missing indices are populated.
 
-- **NFC remove some unused vars, fix comment ([10886](https://github.com/civicrm/civicrm-core/pull/10886))**
+- **[CRM-21110](https://issues.civicrm.org/jira/browse/CRM-21110) Relationships
+  tab on contact summary runs query twice
+  ([10907](https://github.com/civicrm/civicrm-core/pull/10907))**
 
-- **[CRM-21108](https://issues.civicrm.org/jira/browse/CRM-21108) Creating contacts is slow, part 1 of 2: Calculating Greetings ([10906](https://github.com/civicrm/civicrm-core/pull/10906))**
+  This streamlines the processing of the contact relationship listing to reduce
+  the number of queries to run.
 
-- **[CRM-21079](https://issues.civicrm.org/jira/browse/CRM-21079) Datetime logs don't supports timezones ([10874](https://github.com/civicrm/civicrm-core/pull/10874))**
+- **[CRM-21142](https://issues.civicrm.org/jira/browse/CRM-21142) Installation
+  fails if PHP XML module isn't installed
+  ([10939](https://github.com/civicrm/civicrm-core/pull/10939))**
 
-- **Renamed test class. ([10730](https://github.com/civicrm/civicrm-core/pull/10730))**
+  The installer now checks that PHP SimpleXML support is present.
 
-- **Fix PHP Warnings. Replace fatal with statusBounce. Mark appendBreadCr… ([10888](https://github.com/civicrm/civicrm-core/pull/10888))**
+- **[CRM-21139](https://issues.civicrm.org/jira/browse/CRM-21139) Font-Awesome
+  icons not showing on fatal error screen
+  ([10937](https://github.com/civicrm/civicrm-core/pull/10937))**
 
-- **[CRM-21069](https://issues.civicrm.org/jira/browse/CRM-21069) Fail more gracefully on event display with invalid data in the DB ([10865](https://github.com/civicrm/civicrm-core/pull/10865))**
+  Now `crm-i.css` is specifically loaded on the fatal error template.
 
-- **[CRM-21087](https://issues.civicrm.org/jira/browse/CRM-21087) Payment popup goes weird if you click 'adjust payment amount'. ([10882](https://github.com/civicrm/civicrm-core/pull/10882))**
+- **[CRM-19933](https://issues.civicrm.org/jira/browse/CRM-19933) Importing
+  contacts clears out preferred communication method
+  ([10731](https://github.com/civicrm/civicrm-core/pull/10731))**
+
+- **[CRM-21079](https://issues.civicrm.org/jira/browse/CRM-21079) Datetime logs
+  don't supports timezones
+  ([10874](https://github.com/civicrm/civicrm-core/pull/10874)) (continues
+  previous work)**
+
+  A system check appears if certain database fields are `DATETIME` rather than
+  `TIMESTAMP`.  Due to the complexity of assigning timezones and the possibility
+  of customizations depending upon those fields, the check merely explains the
+  situation and recommends using [Doctor
+  When](https://github.com/civicrm/org.civicrm.doctorwhen), a time lord
+  extension, to straighten out the situation.
 
 - **(NFC) Update contributor-key.yml ([10894](https://github.com/civicrm/civicrm-core/pull/10894))**
 
@@ -292,6 +393,22 @@ Released October 4, 2017
 
 ### CiviMail
 
+- **[CRM-21077](https://issues.civicrm.org/jira/browse/CRM-21077) Warn the user
+  when testing outbound mail configuration if CIVICRM_MAIL_LOG is set
+  ([10870](https://github.com/civicrm/civicrm-core/pull/10870))**
+
+  When sending a test email from the Outbound Email form, a user would not be
+  notified if the CiviCRM settings file was set to send all outbound email to a
+  log file.
+
+- **[CRM-20643](https://issues.civicrm.org/jira/browse/CRM-20643) Fix invalid
+  bounce type filter for bounce report
+  ([10427](https://github.com/civicrm/civicrm-core/pull/10427))**
+
+  A dummy option of `-- please select --` for bounce type was hard-coded as a
+  filter option.  This caused the report to default to this value and not load
+  any data.
+
 - **[CRM-20982](https://issues.civicrm.org/jira/browse/CRM-20982) Fix: Mails sent via command line fail due to EHLO/HELO being "localhost" ([10785](https://github.com/civicrm/civicrm-core/pull/10785))**
 
 ### Dedupe
@@ -332,11 +449,38 @@ Released October 4, 2017
 
 ### CiviMember
 
+- **[CRM-21126](https://issues.civicrm.org/jira/browse/CRM-21126)
+  member_is_primary not set by default on passing owner in the url
+  ([10923](https://github.com/civicrm/civicrm-core/pull/10923))**
+
+  The membership search now allows `owner=1` to be specified as a URL parameter
+  that populates the "Primary member?" field.
+
 - **[CRM-20966](https://issues.civicrm.org/jira/browse/CRM-20966) Contribution deleted when relationship deleted, incorrect line items & membership_payments for second inherited membership created in back end via price set ([10759](https://github.com/civicrm/civicrm-core/pull/10759))**
 
 - **[CRM-20955](https://issues.civicrm.org/jira/browse/CRM-20955) Contact's second membership fails to inherit when created in back end using price set ([10745](https://github.com/civicrm/civicrm-core/pull/10745))**
 
 ### CiviContribute
+
+- **[CRM-17040](https://issues.civicrm.org/jira/browse/CRM-17040) Import
+  Contributions using External Id's causes soft credit to be wrongly associated
+  ([10797](https://github.com/civicrm/civicrm-core/pull/10797))**
+
+  This resolves a problem that occurred when importing contributions that have
+  both soft credit and donor contacts identified by external ID.  The
+  contribution would record the soft credit contact as the actual donor.
+
+- **[CRM-20949](https://issues.civicrm.org/jira/browse/CRM-20949)
+  BillingBlock.tpl contains wrong paymentProcessor object on initial load of
+  backend Contribution page.
+  ([10734](https://github.com/civicrm/civicrm-core/pull/10734))**
+
+- **[CRM-21087](https://issues.civicrm.org/jira/browse/CRM-21087) Payment popup
+  goes weird if you click 'adjust payment amount'.
+  ([10882](https://github.com/civicrm/civicrm-core/pull/10882))**
+
+  The pledge payment pop-up caused problems with page focus and covering the
+  Save button.
 
 - **[CRM-21043](https://issues.civicrm.org/jira/browse/CRM-21043) Fix Dupe check of on behalf organisation ([10830](https://github.com/civicrm/civicrm-core/pull/10830))**
 
@@ -371,6 +515,27 @@ Released October 4, 2017
 - **[CRM-20988](https://issues.civicrm.org/jira/browse/CRM-20988) Don't display option of Export, Delete etc to users who lack that permission ([10791](https://github.com/civicrm/civicrm-core/pull/10791))**
 
 ### CiviEvent
+
+- **[CRM-20935](https://issues.civicrm.org/jira/browse/CRM-20935) Deleting an
+  event does not delete links to profiles it used
+  ([10719](https://github.com/civicrm/civicrm-core/pull/10719))**
+
+  Rows in `civicrm_uf_join` were not deleted when events were deleted.  This
+  resolves the bug and performs a cleanup of orphaned rows upon upgrade.
+
+- **[CRM-20237](https://issues.civicrm.org/jira/browse/CRM-20237) Event
+  pricesets copied with long suffix cause DB error
+  ([10929](https://github.com/civicrm/civicrm-core/pull/10929))**
+
+  When copied, a price set has a copy ID tacked onto the end of its title.  This
+  change prevents copies of copies from accumulating many copy ID add-ons.
+
+- **[CRM-21069](https://issues.civicrm.org/jira/browse/CRM-21069) Fail more
+  gracefully on event display with invalid data in the DB
+  ([10865](https://github.com/civicrm/civicrm-core/pull/10865))**
+
+  This avoids a database error by suppressing display of participant records
+  where the event has been deleted in the database.
 
 - **[CRM-13309](https://issues.civicrm.org/jira/browse/CRM-13309) Participant Role on Event's Schedule Reminder form does not populate  ([10801](https://github.com/civicrm/civicrm-core/pull/10801))**
 
@@ -411,7 +576,39 @@ Released October 4, 2017
 
   Replace (some not all) CRM_Core_OptionGroup::values with
   CRM_Activity_BAO_ActivityContact::buildOptions where it is safe to do so (ie.
-  parameters map directly).  
+  parameters map directly).
+
+- **[CRM-20927](https://issues.civicrm.org/jira/browse/CRM-20927)  Allow
+  `civicrm_menu` to store new data in generic column
+  ([10858](https://github.com/civicrm/civicrm-core/pull/10858)) (completes
+  previous work)**
+
+  The schema change is moved to a PHP-based upgrade task rather than a SQL
+  incremental upgrade query template.
+
+- **[CRM-21036](https://issues.civicrm.org/jira/browse/CRM-21036) Change
+  deprecated comments to tags so phpstorm marks functions as deprecated
+  ([10825](https://github.com/civicrm/civicrm-core/pull/10825))**
+
+- **[CRM-21023](https://issues.civicrm.org/jira/browse/CRM-21023) Replace
+  deprecated code and hardcoded IDs with pseudoconstants in Activity BAO
+  ([10816](https://github.com/civicrm/civicrm-core/pull/10816))**
+
+- **(NFC) SettingsStack - Finish incomplete docblock
+  ([10950](https://github.com/civicrm/civicrm-core/pull/10950))**
+
+- **Reinstate accidentally deleted test.
+  ([10938](https://github.com/civicrm/civicrm-core/pull/10938))**
+
+- **NFC remove some unused vars, fix comment
+  ([10886](https://github.com/civicrm/civicrm-core/pull/10886))**
+
+- **Renamed test class.
+  ([10730](https://github.com/civicrm/civicrm-core/pull/10730))**
+
+- **Fix PHP Warnings. Replace fatal with statusBounce. Mark breadcrumbs
+  parameter as array instead of string so editors don't give a warning
+  ([10888](https://github.com/civicrm/civicrm-core/pull/10888))**
 
 ## <a name="credits"></a>Credits
 
