--- a/release-notes/4.7.25.md
+++ b/release-notes/4.7.25.md
@@ -321,30 +321,6 @@ Released October 4, 2017
   When](https://github.com/civicrm/org.civicrm.doctorwhen), a time lord
   extension, to straighten out the situation.
 
-- **(NFC) Update contributor-key.yml ([10894](https://github.com/civicrm/civicrm-core/pull/10894))**
-
-- **[CRM-20936](https://issues.civicrm.org/jira/browse/CRM-20936) Hide statuses on backoffice contribution form ([10718](https://github.com/civicrm/civicrm-core/pull/10718))**
-
-- **[CRM-20914](https://issues.civicrm.org/jira/browse/CRM-20914) pariticipant note field breaking export when populated with data over 32 characters ([10700](https://github.com/civicrm/civicrm-core/pull/10700))**
-
-- **[CRM-21045](https://issues.civicrm.org/jira/browse/CRM-21045) Multiple email field shown on Contribution Page. ([10832](https://github.com/civicrm/civicrm-core/pull/10832))**
-
-- **(NFC) Improve docs in CONTRIBUTING.md ([10853](https://github.com/civicrm/civicrm-core/pull/10853))**
-
-- **[CRM-21088](https://issues.civicrm.org/jira/browse/CRM-21088) Backdrop class contains `drupal_` calls that should be changed ([10884](https://github.com/civicrm/civicrm-core/pull/10884))**
-
-- **(NFC) SettingsStack - Add test coverage for new helper class ([10867](https://github.com/civicrm/civicrm-core/pull/10867))**
-
-- **[CRM-20571](https://issues.civicrm.org/jira/browse/CRM-20571) Offline / Back Office Renewal fatal error when "renewal_date" set to far back. ([10822](https://github.com/civicrm/civicrm-core/pull/10822))**
-
-- **[NFC] Simplify method of getting logged in contact ID ([10855](https://github.com/civicrm/civicrm-core/pull/10855))**
-
-- **[CRM-20933](https://issues.civicrm.org/jira/browse/CRM-20933) Updating Pay later event registration from backend produces formRule error ([10716](https://github.com/civicrm/civicrm-core/pull/10716))**
-
-- **[CRM-17652](https://issues.civicrm.org/jira/browse/CRM-17652) Symfony conflict between Civi and Drupal 8 ([10694](https://github.com/civicrm/civicrm-core/pull/10694))**
-
-- **Update CONTRIBUTORS.txt ([10843](https://github.com/civicrm/civicrm-core/pull/10843))**
-
 - **[CRM-21055](https://issues.civicrm.org/jira/browse/CRM-21055) Change label of cancel button ([10845](https://github.com/civicrm/civicrm-core/pull/10845))**
 
 - **[CRM-21047](https://issues.civicrm.org/jira/browse/CRM-21047) TypeError: financialtypeIds is undefined, on contribution form ([10836](https://github.com/civicrm/civicrm-core/pull/10836))**
@@ -429,6 +405,12 @@ Released October 4, 2017
 
 ### Backdrop Integration
 
+- **[CRM-21088](https://issues.civicrm.org/jira/browse/CRM-21088) Backdrop class
+  contains `drupal_` calls that should be changed
+  ([10884](https://github.com/civicrm/civicrm-core/pull/10884))**
+
+  This would cause problems if Backdrop compatibility mode was disabled.
+
 - **[CRM-21098](https://issues.civicrm.org/jira/browse/CRM-21098) Prevent Backdrop admin drop-down menus from appearing beneath CiviCRM admin menu ([10892](https://github.com/civicrm/civicrm-core/pull/10892))**
 
 - **[CRM-21095](https://issues.civicrm.org/jira/browse/CRM-21095) CSS conflicts between CiviCRM and Backdrop ([10891](https://github.com/civicrm/civicrm-core/pull/10891), [42](https://github.com/civicrm/civicrm-backdrop/pull/42), and [41](https://github.com/civicrm/civicrm-backdrop/pull/41))**
@@ -440,6 +422,15 @@ Released October 4, 2017
 - **[CRM-21089](https://issues.civicrm.org/jira/browse/CRM-21089) Fatal error on "Interview Respondents" ([10885](https://github.com/civicrm/civicrm-core/pull/10885))**
 
 ### Drupal Integration Modules
+
+- **[CRM-17652](https://issues.civicrm.org/jira/browse/CRM-17652) Symfony
+  conflict between Civi and Drupal 8
+  ([10694](https://github.com/civicrm/civicrm-core/pull/10694) and
+  [465](https://github.com/civicrm/civicrm-drupal/pull/465)) (in progress)**
+
+  This uses Composer to install dependencies (such as Symfony) in a way that
+  does not conflict with Drupal 8.  It resolves a bug where Drupal 8 sites with
+  CiviCRM could not install any more modules.
 
 - **[CRM-20838](https://issues.civicrm.org/jira/browse/CRM-20838) Provide alert & fix method for tables in the CiviCRM Db with no log table ([10628](https://github.com/civicrm/civicrm-core/pull/10628))**
 
@@ -455,6 +446,13 @@ Released October 4, 2017
 
   The membership search now allows `owner=1` to be specified as a URL parameter
   that populates the "Primary member?" field.
+
+- **[CRM-20571](https://issues.civicrm.org/jira/browse/CRM-20571) Offline / Back
+  Office Renewal fatal error when "renewal_date" set to far back.
+  ([10822](https://github.com/civicrm/civicrm-core/pull/10822))**
+
+  A helpful warning appears when attempting to set a membership renewal date
+  prior to the join date.
 
 - **[CRM-20966](https://issues.civicrm.org/jira/browse/CRM-20966) Contribution deleted when relationship deleted, incorrect line items & membership_payments for second inherited membership created in back end via price set ([10759](https://github.com/civicrm/civicrm-core/pull/10759))**
 
@@ -481,6 +479,21 @@ Released October 4, 2017
 
   The pledge payment pop-up caused problems with page focus and covering the
   Save button.
+
+- **[CRM-20936](https://issues.civicrm.org/jira/browse/CRM-20936) Hide statuses
+  on backoffice contribution form
+  ([10718](https://github.com/civicrm/civicrm-core/pull/10718))**
+
+  Non-applicable contribution statuses are now suppressed when creating
+  contributions, event registrations, and memberships on the backend.
+
+- **[CRM-21045](https://issues.civicrm.org/jira/browse/CRM-21045) Multiple email
+  field shown on Contribution Page.
+  ([10832](https://github.com/civicrm/civicrm-core/pull/10832))**
+
+  If a contribution page included a profile with a billing email, the email
+  field at the top of the contribution page would fail to disappear, resulting
+  in two HTML fields for the same data.  This resolves that bug.
 
 - **[CRM-21043](https://issues.civicrm.org/jira/browse/CRM-21043) Fix Dupe check of on behalf organisation ([10830](https://github.com/civicrm/civicrm-core/pull/10830))**
 
@@ -536,6 +549,14 @@ Released October 4, 2017
 
   This avoids a database error by suppressing display of participant records
   where the event has been deleted in the database.
+
+- **[CRM-20914](https://issues.civicrm.org/jira/browse/CRM-20914) participant
+  note field breaking export when populated with data over 32 characters
+  ([10700](https://github.com/civicrm/civicrm-core/pull/10700))**
+
+- **[CRM-20933](https://issues.civicrm.org/jira/browse/CRM-20933) Updating Pay
+  later event registration from backend produces formRule error
+  ([10716](https://github.com/civicrm/civicrm-core/pull/10716))**
 
 - **[CRM-13309](https://issues.civicrm.org/jira/browse/CRM-13309) Participant Role on Event's Schedule Reminder form does not populate  ([10801](https://github.com/civicrm/civicrm-core/pull/10801))**
 
@@ -609,6 +630,21 @@ Released October 4, 2017
 - **Fix PHP Warnings. Replace fatal with statusBounce. Mark breadcrumbs
   parameter as array instead of string so editors don't give a warning
   ([10888](https://github.com/civicrm/civicrm-core/pull/10888))**
+
+- **(NFC) Update contributor-key.yml
+  ([10894](https://github.com/civicrm/civicrm-core/pull/10894))**
+
+- **(NFC) Improve docs in CONTRIBUTING.md
+  ([10853](https://github.com/civicrm/civicrm-core/pull/10853))**
+
+- **(NFC) SettingsStack - Add test coverage for new helper class
+  ([10867](https://github.com/civicrm/civicrm-core/pull/10867))**
+
+- **[NFC] Simplify method of getting logged in contact ID
+  ([10855](https://github.com/civicrm/civicrm-core/pull/10855))**
+
+- **Update CONTRIBUTORS.txt
+  ([10843](https://github.com/civicrm/civicrm-core/pull/10843))**
 
 ## <a name="credits"></a>Credits
 
